--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ github_username:  divasheng
 theme: minima
 plugins:
   - jekyll-feed
+  - jemoji
 
 # Exclude from processing.
 # The following items will not be processed, by default.
