Add debugging instructions to readme.

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 twitter_username: divasheng
 github_username:  divasheng
+linkedin_username: divashen
 
 # Build settings
 theme: minima
