--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Empowering others through learning and knowledge share.
 
 baseurl: "website-notion" # the subpath of your site, e.g. /blog
-url: "https://divasheng.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://divashengovender.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 twitter_username: divasheng
